src/snapshots/rint__cfg__tests__snapshot_cfg.snap
---
source: src/cfg.rs
expression: format_cfg(&cfg)
---
block 0 [entry]
  preds: []
  succs: [1]
  uses: []
  defs: []

block 1 [-]
  t0 ← 1
  if t0 == 1 jump L0
  preds: [0]
  succs: [3, 2]
  uses: []
  defs: [t0]

block 2 [-]
  t1 ← 2
  jump L1
  preds: [1]
  succs: [4]
  uses: []
  defs: [t1]

block 3 [L0]
  L0:
  t1 ← 3
  preds: [1]
  succs: [4]
  uses: []
  defs: [t1]

block 4 [L1]
  L1:
  return t1
  preds: [2, 3]
  succs: []
  uses: [t1]
  defs: []
